--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@
   font-size: large;
 }
 
+.margin-left {
+  margin-left: 10px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
