Cambiado el color del active del navbar

--- a/src/components/styles/Navigator.css
+++ b/src/components/styles/Navigator.css
@@ -8,7 +8,7 @@
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover {
    color: #ffffff;
-   background-color: #FFC107;
+   background-color: #1976D2;
 }
 
 .navbar-default .navbar-brand {
