--- a/src/views/styles/main.css
+++ b/src/views/styles/main.css
@@ -8,6 +8,21 @@
   color: #ffffff;
 }
 
+.btn-escape {
+  background-color: #BDBDBD;
+  color: #ffffff
+}
+
 .App-header {
   background-color: #2196F3
+}
+
+.btn-on {
+  background-color: #8BC34A;
+  color: #ffffff;
+}
+
+.btn-danger {
+  background-color: #FF5722;
+  color: #ffffff;
 }
